@@ -1,3 +1,9 @@
+2008-09-29  Sam Steingold  <sds@gnu.org>
+
+	* modules/matlab/wrap.lisp (matfile-content): use MEMORY-AS
+	instead of WITH-C-VAR+CAST for efficiency
+	Suggested by "Hoehle, Joerg-Cyril" <Joerg-Cyril.Hoehle@t-systems.com>
+
 2008-09-26  Sam Steingold  <sds@gnu.org>
 
 	* m4/general.m4 (CL_CANONICAL_HOST_CPU): better mips detection,
